--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ritika Suman</title>
+    <title>Ritika's Portfolio</title>
+    <link rel="icon" type="image/png" href="/assets/WebMain.png" />
   </head>
   <body>
     <div id="root"></div>
